# multi_drone_slung_load

./: README.md  image_bridge.launch.py  package.xml  requirements.txt  requirements_drones.txt  requirements_drones_reduced.txt  requirements_gcs.txt  setup.cfg  setup.py
config/: phys.yaml  phys_drones_info.txt  phys_drones_uuid.txt  phys_load_uuid.txt  sim.yaml
gz/: world_multi_with_load.sdf
gz_to_del/: world_multi_with_load.sdf
launch/: camera_phys.launch.py  drone.launch.py  drones.launch.py  drones.launch_old.py  gcs.launch.py  gcs_upper.launch.py  gz_bridge.launch.py  gz_bridge_gt.launch.py  image_bridge.launch.py  launch_drones.launch.py  load.launch.py  logging.launch.py  old_gz_bridge_clock.launch.py  old_gz_bridge_gt.launch.py  old_image_bridge.launch.py  old_sim_no_cams.launch.py  phys_drone.launch.py  phys_gcs.launch.py  phys_load.launch.py  phys_no_gcs.launch.py  phys_single_offboard.launch.py  physical.launch.py  sim.launch.py  sim_no_bridge.launch.py  sim_no_cams.launch.py  sim_no_gt.launch.py  swarm_load_carry_launch.py  swarm_load_carry_launch.yaml  test.launch.py
multi_drone_slung_load/: drone.py  drone_offboard_ros.py  gcs_background.py  gcs_user.py  load.py  pose_pixhawk.py  pose_pixhawk_old.py  state.py  utils.py
swarm_load_carry/: bar.py  controller.py  drone.py  drone_noROS.py  drone_offboard_mavlink.py  drone_offboard_ros.py  foo.py  gcs.py  gcs_background.py  gcs_user.py  generate_spawn_points.py  load.py  logging_test.py  main.py  main_noROS.py  my_node.py  offboard_test.py  pose.py  pose_pixhawk.py  state.py  test.py  utils.py
swarm_load_carry/frame_transforms/: CMakeLists.txt  example_pybind.cpp  example_pybind.h  example_pybind_bind.cpp  frame_transforms.cpp  frame_transforms_bind.cpp
tools/: multi_mavsdk_server.sh  (+5 more)
(+15 files in other folders)
